# privdiag

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
include/privdiag/: security_summary.h
src/: privdiag_dll.cpp  privdiag_dll.def  privdiag_exe.cpp
